--- a/calculator.html
+++ b/calculator.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 
 <head>
-    <title>Calculater</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="app.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
