--- a/calculator.html
+++ b/calculator.html
@@ -11,14 +11,7 @@
 <body>
     <div class="container">
         <div class="calculator">
-            <div class="calculator__display--bare">
-                <span class="calculator__operend--left">0</span>
-                <span class="calculator__operator">+</span>
-                <span class="calculator__operend--right">0</span>
-                <span class="calculator__equal">=</span>
-                <span class="calculator__result">0</span>
-            </div>
-            <div class="calculator__display--for-advanced">0</div>
+            <div class="calculator__display">0</div>
             <div class="calculator__buttons">
                 <div class="clear__and__enter">
                     <button class="clear">AC</button>
